tests/semantic/invalid/10_function_redefine.tc
// 非法测试10: 函数重定义
// 目标：应报错 SEM_REDEFINED_SYMBOL
int foo() {
    return 1;
}
int foo() {  // 重复定义
    return 2;
}

int main(void) {
    return foo();
}
